--- a/src/features/products/mostSaledProduct/mostSaledProduct.style.css
+++ b/src/features/products/mostSaledProduct/mostSaledProduct.style.css
@@ -1,21 +1,41 @@
 .mostsaledproduct-container {
-    width: 100px;
-    height: 116px;
-    border-radius: 10px;
-    position: relative;
-    margin-top: 15px;
-
+  width: 110px;
+  height: 136px;
+  border-radius: 10px;
+  position: relative;
+  margin-top: 15px;
 }
-.product-info {
-    position: absolute;
-    bottom: 0;
-    height: 36px;
-    background-color: rgba(44, 123, 229, 0.5);;
-    width: 100%;
 
+.mostsaledproduct-container .product-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  padding-right: 5px;
+  height: 40px;
+  background-color: rgba(44, 123, 229, 0.5);
+  border-radius: 10px;
+  width: 100%;
+  color: var(--color-white);
+  text-align: right;
+}
+
+.mostsaledproduct-container .product-footer .product-info {
+  display: flex;
+  flex-direction: column;
+  bottom: 0;
+  padding-right: 5px;
+}
+
+.mostsaledproduct-container .product-footer .product-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 5px;
 }
 
 .product-img {
-    position: absolute;
-    border-radius: 10px;
+  position: absolute;
+  border-radius: 10px;
 }
