--- a/src/features/swipers/categorySwiper/categorySwiper.style.css
+++ b/src/features/swipers/categorySwiper/categorySwiper.style.css
@@ -1,36 +1,58 @@
 .categoryswiper-container {
-    width: 100%;
-    /* height: 25px; */
-    margin-top: 15px;
+  width: 100%;
+  /* height: 25px; */
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 .container-title {
-    direction: rtl;
+  direction: rtl;
+  font-family: "Cairo";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 34px;
+  color: var(--color-mainBlue);
+  padding-right: 13px;
 }
-.category-container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: row;
+.categoryswiper-container .category-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+  padding: 5px;
+  gap: 10px;
 }
-.swiper {
-    width: 100%;
-    height: 100%;
-}
-  
-.swiper-slide {
-text-align: center;
-font-size: 18px;
-background: #fff;
 
-/* Center slide text vertically */
-display: flex;
-justify-content: center;
-align-items: center;
+.categoryswiper-container .category-container p {
+  font-family: "Cairo";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 30px;
+  color: var(--color-mainBlue);
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.categoryswiper-container .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  border-radius: 10px;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .swiper-slide img {
-display: block;
-width: 100%;
-height: 100%;
-object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
