--- a/src/features/swipers/mainSwiper/mainSwiper.style.css
+++ b/src/features/swipers/mainSwiper/mainSwiper.style.css
@@ -1,27 +1,40 @@
 .mainswiper-container {
-    width: 100%;
-    height: 150px;
+  width: 95%;
+  height: 350px;
+  border-radius: 10px;
+  margin: auto;
+  overflow: hidden;
 }
-.swiper {
-    width: 100%;
+
+.mainswiper-container .swiper {
+  width: 100%;
+  max-height: 351px;
+}
+
+.mainswiper-container .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainswiper-container .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* ____ MEDIA QUERIES (SMALL DEVICES) ________ */
+@media screen and (max-width: 600px) {
+  .mainswiper-container {
+    height: 150px;
+  }
+  .mainswiper-container .swiper {
     max-height: 151px;
   }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    
-  
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+}
