--- a/src/pages/mainPage/MainNavBar.style.css
+++ b/src/pages/mainPage/MainNavBar.style.css
@@ -1,7 +1,26 @@
-.container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 100px;
-    align-items: flex-end;
+.main-nav {
+  border-radius: 10px;
+  background: var(--color-white);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.main-nav .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 100px;
+  align-items: flex-end;
+}
+
+.main-nav .container .nav-icons {
+  display: flex;
+  gap: 20px;
+  padding: 0px 0px 10px 10px;
+}
+
+.main-nav .container .logo {
+  padding-right: 18px;
+  padding-bottom: 10px;
 }
