--- a/src/features/swipers/mostSaledSwiper/mostSaledSwiper.style.css
+++ b/src/features/swipers/mostSaledSwiper/mostSaledSwiper.style.css
@@ -1,22 +1,38 @@
-.swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-  
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+.MostSaledSwiper h3 {
+  font-family: "Cairo";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 34px;
+  text-align: right;
+  color: var(--color-mainBlue);
+  padding-right: 13px;
+}
+
+.MostSaledSwiper .swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.MostSaledSwiper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: transparent;
+  border-radius: 10px;
+  width: 30% !important;
+  padding: 0 !important;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.MostSaledSwiper .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+
