add category context

--- a/src/features/swipers/categorySwiper/categorySwiper.style.css
+++ b/src/features/swipers/categorySwiper/categorySwiper.style.css
@@ -56,3 +56,11 @@
   height: 100%;
   object-fit: cover;
 }
+
+.icon-category {
+  color: var(--color-mainBlue);
+  
+}
+.active-category {
+  color: red;
+}
