--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cairo&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -8,13 +8,12 @@
 body {
   min-height: 100vh;
   position: relative;
-
 }
 #root {
   --color-mainBlue: #2c7be5;
   --color-bg: #d8e4f5;
   --color-bg-Blue: rgba(44, 123, 229, 0.5);
   --color-white: #ffffff;
+  --color-orange: #ff6347;
   background-color: var(--color-bg);
-
 }
