--- a/src/features/swipers/mostSaledSwiper/mostSaledSwiper.style.css
+++ b/src/features/swipers/mostSaledSwiper/mostSaledSwiper.style.css
@@ -9,6 +9,10 @@
   padding-right: 13px;
 }
 
+.MostSaledSwiper .mySwiper {
+  width: 95% !important;
+}
+
 .MostSaledSwiper .swiper {
   width: 100%;
   height: 100%;
@@ -39,7 +43,7 @@
 /* ____ MEDIA QUERIES (MEDIUM DEVICES) ________ */
 @media screen and (max-width: 1024px) {
   .MostSaledSwiper .swiper-slide {
-    width: 29% !important;
+    width: 31% !important;
   }
 }
 
