--- a/src/pages/mainPage/MainNavBar.scss
+++ b/src/pages/mainPage/MainNavBar.scss
@@ -1,10 +1,9 @@
 .main-nav {
-  border-radius: 10px;
+  border-radius: 0 0 10px 10px;
   background: var(--color-white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   overflow: hidden;
   margin-bottom: 20px;
-
   .container {
     display: flex;
     flex-direction: row;
