Added notification style

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  --color-mainBlue: #2c7be5;
+  --color-bg: #d8e4f5;
+  --color-bg-Blue: rgba(44, 123, 229, 0.5);
+  --color-white: #ffffff;
+  --color-orange: #ff6347;
+  --color-gray: #989898;
 }
 
 body {
@@ -10,11 +16,6 @@ body {
   position: relative;
 }
 #root {
-  --color-mainBlue: #2c7be5;
-  --color-bg: #d8e4f5;
-  --color-bg-Blue: rgba(44, 123, 229, 0.5);
-  --color-white: #ffffff;
-  --color-orange: #ff6347;
   background-color: var(--color-bg);
   min-height: 100vh;
 }
