--- a/src/pages/notifcationsPage/notificationNavBar.style.scss
+++ b/src/pages/notifcationsPage/notificationNavBar.style.scss
@@ -1,21 +1,42 @@
 .notificationnavbar-container {
-  background-color: red;
   width: 100%;
-  height: 13%;
+  height: 100px;
   border-radius: 0 0 10px 10px;
   background: var(--color-white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  margin-bottom: 15px;
+  // margin-bottom: 10px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+
   .rapper {
     width: 95%;
-    background-color: red;
+    margin-top: 10px;
     display: flex;
     justify-content: space-between;
+
     .title {
-        width: 50%;
+      P {
+        margin-top: 10px;
+        gap: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: "Cairo";
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 37px;
+        color: var(--color-mainBlue);
+      }
+    }
+
+    .delete-icon {
+      color: var(--color-gray);
+    }
+
+    .back-icon {
+      color: var(--color-gray);
     }
   }
 }
