--- a/src/features/swipers/categorySwiper/categorySwiper.scss
+++ b/src/features/swipers/categorySwiper/categorySwiper.scss
@@ -5,16 +5,28 @@
   margin-bottom: 15px;
 
   .container-title {
-    direction: rtl;
-    font-family: "Cairo";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 34px;
-    color: var(--color-mainBlue);
-    padding-right: 13px;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 15px;
     padding-bottom: 10px;
     margin-top: 20px;
+
+    .bar {
+      width: 4px;
+      height: 32px;
+      background: var(--color-orange);
+    }
+
+    h3 {
+      font-family: "Cairo";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 37px;
+      text-align: right;
+      color: var(--color-mainBlue);
+      padding-right: 8px;
+    }
   }
 
   .category-container {
@@ -34,6 +46,9 @@
       text-align: right;
       color: var(--color-mainBlue);
     }
+  }
+  .mySwiper {
+    width: 95% !important;
   }
 
   .swiper {
