--- a/src/features/swipers/mostSaledSwiper/mostSaledSwiper.scss
+++ b/src/features/swipers/mostSaledSwiper/mostSaledSwiper.scss
@@ -1,13 +1,25 @@
 .MostSaledSwiper {
-  h3 {
-    font-family: "Cairo";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 34px;
-    text-align: right;
-    color: var(--color-mainBlue);
-    padding-right: 13px;
+  .container-title {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 15px;
+
+    .bar {
+      width: 4px;
+      height: 32px;
+      background: var(--color-orange);
+    }
+    
+    h3 {
+      font-family: "Cairo";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 37px;
+      text-align: right;
+      color: var(--color-mainBlue);
+      padding-right: 8px;
+    }
   }
 
   .mySwiper {
