--- a/src/features/products/modalProduct/modalProduct.scss
+++ b/src/features/products/modalProduct/modalProduct.scss
@@ -6,111 +6,132 @@
   border-radius: 10px;
 
   .card {
+    display: flex;
+    flex-direction: column;
     background: #fff;
-    width: 620px;
-    height: 550px;
-    overflow: hidden;
-    border: 2px solid #2c7be5;
+    width: 357px;
+    height: 193px;
 
     .single-product {
-      margin-bottom: 26px;
       width: 100%;
-      border-radius: 10px;
+      height: 100%;
 
-      .part-1 {
-        position: relative;
-        height: 380px;
-        max-height: 390px;
-        margin-bottom: 20px;
-        overflow: hidden;
-        background: var(--color-white);
-        &::before {
-          position: absolute;
-          content: "";
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          z-index: -1;
-          transition: all 0.3s;
-        }
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          overflow: hidden;
-          border-radius: 10px;
-        }
+      hr {
+        margin: 0 auto;
+        width: 314px;
+        border: 2px solid #2c7be5;
       }
 
-      .part-2 {
+      .ModalProduct-part-1 {
+        width: 100%;
+        height: 50%;
         display: flex;
-        flex-direction: column;
-        margin-top: -10px;
+        flex-direction: row;
+        align-items: flex-end;
+        justify-content: flex-end;
+        padding-top: 10px;
+        padding-right: 22px;
+        margin-bottom: 10px;
+        gap: 15px;
 
         .product-title {
+          color: var(--color-mainBlue);
+          text-align: right;
           font-family: "Cairo";
           font-style: normal;
-          font-weight: 500;
-          font-size: 28px;
-          line-height: 30px;
-          text-align: center;
-          color: #2c7be5;
-          padding-bottom: 5px;
+          h4 {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 30px;
+          }
+          span {
+            font-weight: 500;
+            font-size: 22px;
+            line-height: 41px;
+          }
         }
 
-        .quantity {
-          display: flex;
-          flex-direction: row;
-          justify-content: space-around;
-          align-items: center;
-          padding: 10px;
-          gap: 20px;
-          .quantity-icons {
-            display: flex;
-            align-items: center;
-            span {
-              font-family: "Cairo";
-              font-style: normal;
-              font-weight: 500;
-              font-size: 28px;
-              padding: 0px 10px;
-              color: #2c7be5;
-            }
+        .img-container {
+          width: 79px;
+          height: 66px;
+          //   border-radius: 10px;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            overflow: hidden;
+            border-radius: 10px;
           }
+        }
+
+        .quantity-icons {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          max-width: 38px;
+
           span {
             font-family: "Cairo";
             font-style: normal;
             font-weight: 500;
-            font-size: 29px;
-            line-height: 30px;
-            text-align: center;
-            color: #2c7be5;
+            font-size: 15px;
+            padding: auto;
+            color: var(--color-mainBlue);
+          }
+        }
+      }
+
+      .ModalProduct-part-2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        // margin-top: 10px;
+        .total-price {
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 500;
+          color: var(--color-mainBlue);
+          p {
+            font-size: 14px;
+            line-height: 26px;
+            span {
+              font-size: 18px;
+              line-height: 34px;
+              color: var(--color-orange);
+            }
           }
         }
 
         .confirmation {
           display: flex;
-          flex-direction: row;
-          justify-content: space-around;
           align-items: center;
-          span {
-            font-family: "Cairo";
-            font-style: normal;
-            font-weight: 500;
-            font-size: 28px;
-            text-align: center;
-            color: #2c7be5;
-            padding-right: 5px;
-          }
-          .left {
+          gap: 25px;
+          margin-top: 8px;
+
+          button {
             display: flex;
             align-items: center;
+            justify-content: center;
+            gap: 5px;
+            width: 100px;
+            height: 38px;
+            border-radius: 10px;
+            border: none;
+            span {
+              font-family: "Cairo";
+              font-style: normal;
+              font-weight: 500;
+              font-size: 14px;
+              color: var(--color-white);
+            }
           }
-          .right {
-            display: flex;
-            align-items: center;
+
+          .cancel-btn {
+            background: var(--color-orange);
+          }
+          .check-btn {
+            background: var(--color-mainBlue);
           }
         }
       }
@@ -119,56 +140,83 @@
 }
 
 /* ____ MEDIA QUERIES (MEDIUM DEVICES) ________ */
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 600px) {
   .ModalProduct {
     .card {
-      width: 450px;
-      height: 550px;
-      .single-product {
-        .part-1 {
-          height: 400px;
-          max-height: 410px;
-        }
-      }
-    }
-  }
-}
+      width: 557px;
+      height: 293px;
 
-/* ____ MEDIA QUERIES (SMALL DEVICES) ________ */
-@media screen and (max-width: 600px) {
-  .ModalProduct {
-    .card {
-      width: 220px;
-      height: 420px;
       .single-product {
-        .part-1 {
-          height: 280px;
-          max-height: 290px;
-          margin-bottom: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        hr {
+          width: 80%;
         }
 
-        .part-2 {
-          display: flex;
-          flex-direction: column;
-          margin-top: -10px;
+        .ModalProduct-part-1 {
+          align-items: center;
+          gap: 25px;
+
           .product-title {
-            font-family: "Cairo";
-            font-style: normal;
-            font-weight: 500;
-            font-size: 20px;
-            line-height: 30px;
-            text-align: center;
-            color: #2c7be5;
-          }
-          .quantity {
+            h4 {
+              font-size: 26px;
+            }
             span {
-              font-size: 19px;
+              font-size: 32px;
+            }
+          }
+
+          .img-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 119px;
+            height: 96px;
+            img {
+              width: 100%;
+              height: 100%;
+              border-radius: 10px;
+            }
+          }
+
+          .quantity-icons {
+            span {
+              font-size: 20px;
+            }
+            .iicon {
+              font-size: 35px;
+            }
+          }
+        }
+
+        .ModalProduct-part-2 {
+          .total-price {
+            margin: 10px 0;
+            p {
+              font-size: 24px;
+              span {
+                font-size: 28px;
+              }
             }
           }
 
           .confirmation {
-            span {
-              font-size: 18px;
+            gap: 30px;
+            margin-top: 11px;
+
+            button {
+              width: 150px;
+              height: 56px;
+              span {
+                font-size: 24px;
+              }
+            }
+
+            .cancel-btn {
+              background: var(--color-orange);
+            }
+            .check-btn {
+              background: var(--color-mainBlue);
             }
           }
         }
