--- a/src/pages/notifcationsPage/notificationNavBar.style.scss
+++ b/src/pages/notifcationsPage/notificationNavBar.style.scss
@@ -4,14 +4,13 @@
   border-radius: 0 0 10px 10px;
   background: var(--color-white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  // margin-bottom: 10px;
+  margin-bottom: 10px;
   display: flex;
   align-items: center;
   justify-content: space-around;
 
   .rapper {
     width: 95%;
-    margin-top: 10px;
     display: flex;
     justify-content: space-between;
 
