Updated bg color

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   --color-mainBlue: #2c7be5;
-  --color-bg: #d8e4f5;
+  --color-bg: #EDF2F9;
   --color-bg-Blue: rgba(44, 123, 229, 0.5);
   --color-white: #ffffff;
   --color-orange: #ff6347;
