--- a/src/pages/cartPage/cartNavBar.scss
+++ b/src/pages/cartPage/cartNavBar.scss
@@ -16,8 +16,9 @@
     justify-content: space-between;
 
     .title {
+      margin-right: 5px;
       P {
-        gap: 5px;
+        gap: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
