--- a/src/pages/splashScreen/splash.style.scss
+++ b/src/pages/splashScreen/splash.style.scss
@@ -1,12 +1,25 @@
 .splash-container {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    img {
-        object-fit: contain;
-        width: 50%;
-        height: 50%;
-    }
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  img {
+    object-fit: contain;
+    width: 50%;
+    height: 50%;
+  }
+
+  .footer-title {
+    position: absolute;
+    bottom: 78px;
+    color: var(--color-orange);
+    font-family: "Cairo";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 45px;
+    text-align: center;
+  }
 }
