--- a/src/layouts/globalLayout/globalLayOut.style.scss
+++ b/src/layouts/globalLayout/globalLayOut.style.scss
@@ -1,6 +1,6 @@
 .globallayout-container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     .layout-body {
         height: 80%;
         overflow-y: scroll;
