--- a/src/pages/auth/registerPage/registerPage.scss
+++ b/src/pages/auth/registerPage/registerPage.scss
@@ -104,7 +104,7 @@
 
 /* ____ MEDIA QUERIES (MEDIUM DEVICES) ________ */
 @media screen and (min-width: 600px) {
-  .loginPage {
+  .registerPage {
     padding: 100px 0px;
   }
 }
