fix NavBar layout

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
 }
 #root {
   background-color: var(--color-bg);
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 ::-webkit-scrollbar {
