--- a/src/layouts/globalLayout/globalLayOut.style.scss
+++ b/src/layouts/globalLayout/globalLayOut.style.scss
@@ -1,8 +1,9 @@
 .globallayout-container {
-    width: 100%;
+  height: 100vh;
+  
+  .layout-body {
     height: 100%;
-    .layout-body {
-        height: 80%;
-        overflow-y: scroll;
-    }
+    overflow-y: scroll;
+    background-color: var(--color-bg);
+  }
 }
