--- a/src/pages/mainPage/MainNavBar.scss
+++ b/src/pages/mainPage/MainNavBar.scss
@@ -2,13 +2,18 @@
   border-radius: 0 0 10px 10px;
   background: var(--color-white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  overflow: hidden;
+  // position: sticky;
+  // top: 0;
+  // display: block;
   margin-bottom: 20px;
+  // z-index: 999;
+
   .container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100px;
+    // height: 100px;
+    height: 80px;
     align-items: flex-end;
     .nav-icons {
       display: flex;
