--- a/src/pages/notifcationsPage/notifivcationspageStyle.scss
+++ b/src/pages/notifcationsPage/notifivcationspageStyle.scss
@@ -18,12 +18,10 @@
       display: flex;
       flex-direction: row-reverse;
       align-items: center;
-      margin-right: 10px;
 
-      .bar {
-        width: 3px;
-        height: 32px;
-        background: var(--color-orange);
+      .icon {
+        color: var(--color-orange);
+        font-size: 40px;
       }
 
       h3 {
@@ -34,7 +32,7 @@
         line-height: 37px;
         text-align: right;
         color: var(--color-mainBlue);
-        padding-right: 8px;
+        // padding-right: 8px;
       }
     }
 
