--- a/src/features/products/mostSaledProduct/mostSaledProduct.scss
+++ b/src/features/products/mostSaledProduct/mostSaledProduct.scss
@@ -13,6 +13,7 @@
   .product-footer {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
     position: absolute;
     bottom: 0;
@@ -28,10 +29,15 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding-left: 5px;
+      background: var(--color-white);
+      width: 27px;
+      height: 27px;
+      border-radius: 5px;
+      margin-left: 6px;
       .icon {
         font-size: 40px;
         cursor: pointer;
+        color: var(--color-mainBlue);
       }
     }
 
