--- a/src/features/products/productList/productList.scss
+++ b/src/features/products/productList/productList.scss
@@ -48,6 +48,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-bottom: 15px;
     button {
       width: 98px;
       height: 34px;
