--- a/src/pages/notifcationsPage/notificationNavBar.style.scss
+++ b/src/pages/notifcationsPage/notificationNavBar.style.scss
@@ -1,6 +1,6 @@
 .notificationnavbar-container {
   width: 100%;
-  height: 100px;
+  height: 75px;
   border-radius: 0 0 10px 10px;
   background: var(--color-white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -11,13 +11,14 @@
 
   .rapper {
     width: 95%;
+    margin-top: 10px;
     display: flex;
     justify-content: space-between;
 
     .title {
+      margin-right: 5px;
       P {
-        margin-top: 10px;
-        gap: 5px;
+        gap: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
