--- a/src/features/products/productListItem/productListItem.scss
+++ b/src/features/products/productListItem/productListItem.scss
@@ -24,7 +24,7 @@
       position: relative;
       height: 280px;
       max-height: 290px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       overflow: hidden;
       background: var(--color-white);
       &::before {
@@ -38,13 +38,21 @@
         transition: all 0.3s;
       }
 
+      .fav-icon {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 28px;
+        color: var(--color-white);
+      }
+
       .location {
         display: flex;
         align-items: center;
         gap: 2px;
         position: absolute;
         top: 15px;
-        left: 20px;
+        left: 15px;
         color: var(--color-white);
         background-color: var(--color-mainBlue);
         padding: 2px 7px;
@@ -98,30 +106,42 @@
 
     .part-2 {
       display: flex;
-      flex-direction: column;
-      margin-top: -10px;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0px 11px;
 
-      .product-title {
-        color: var(--color-mainBlue);
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 15px;
-        line-height: 22px;
-        text-align: right;
-        padding-right: 5px;
+      .icon {
+        color: var(--color-orange);
+        font-size: 30px;
       }
 
-      h4 {
-        /* display: inline-block; */
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 37px;
-        text-align: right;
-        color: var(--color-mainBlue);
-        padding-right: 5px;
+      .product-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+
+        .product-title {
+          color: var(--color-mainBlue);
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 600;
+          font-size: 15px;
+          line-height: 22px;
+          text-align: right;
+        }
+
+        .product-price {
+          /* display: inline-block; */
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 500;
+          font-size: 20px;
+          line-height: 37px;
+          text-align: right;
+          color: var(--color-mainBlue);
+        }
       }
     }
   }
