--- a/src/features/swipers/mainSwiper/mainSwiper.scss
+++ b/src/features/swipers/mainSwiper/mainSwiper.scss
@@ -5,6 +5,19 @@
   margin: auto;
   overflow: hidden;
 
+  // .swiper-button-prev {
+  //   color: red;
+  // }
+
+  // .swiper-button-next {
+  //   color: #000;
+  // }
+  // .swiper-pagination-bullet {
+  //   width: 15px !important;
+  //   height: 5px !important;
+  //   border-radius: 1px;
+  // }
+
   .swiper {
     width: 100%;
     max-height: 351px;
