--- a/src/pages/profilePage/profilePage.scss
+++ b/src/pages/profilePage/profilePage.scss
@@ -34,8 +34,12 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      margin-right: 22px;
+      // gap: 10px;
+      // margin-right: 22px;
       padding: 5px 0px;
+      .css-j204z7-MuiFormControlLabel-root {
+        margin-right: 10px;
+      }
       .css-j204z7-MuiFormControlLabel-root .MuiFormControlLabel-label {
         font-family: "Cairo";
         font-style: normal;
@@ -43,6 +47,14 @@
         font-size: 20px;
         line-height: 30px;
         color: var(--color-mainBlue);
+      }
+      .dark-icon {
+        font-size: 25px;
+        color: #0b1727;
+      }
+      .light-icon {
+        font-size: 25px;
+        color: #fff620;
       }
     }
 
@@ -65,6 +77,7 @@
           color: var(--color-mainBlue);
         }
       }
+
       .ordersDetails-container {
         .orderDetails-item {
           display: flex;
@@ -75,7 +88,6 @@
             color: var(--color-orange);
             font-size: 25px;
           }
-
           h4 {
             white-space: initial;
             // word-wrap: break-word;
