--- a/src/features/products/productListItem/productListItem.scss
+++ b/src/features/products/productListItem/productListItem.scss
@@ -1,5 +1,17 @@
+@import "../../../style.scss";
+
 .card {
-  background: var(--color-white);
+  @include themify($themes) {
+    background: themed("bgSoft");
+    .part-2 {
+      .icon {
+        color: themed("orangeBlueIcons");
+      }
+      .product-info {
+        color: themed("textColor");
+      }
+    }
+  }
   height: 350px;
   border-radius: 10px;
   overflow: hidden;
@@ -26,7 +38,7 @@
       max-height: 290px;
       margin-bottom: 10px;
       overflow: hidden;
-      background: var(--color-white);
+      background: #ffffff;
       &::before {
         position: absolute;
         content: "";
@@ -43,7 +55,7 @@
         top: 10px;
         right: 10px;
         font-size: 28px;
-        color: var(--color-white);
+        color: #ffffff;
       }
 
       .location {
@@ -53,8 +65,8 @@
         position: absolute;
         top: 15px;
         left: 15px;
-        color: var(--color-white);
-        background-color: var(--color-mainBlue);
+        color: #ffffff;
+        background-color: #2c7be5;
         padding: 2px 7px;
         text-transform: uppercase;
         font-family: "Cairo";
@@ -112,8 +124,8 @@
       padding: 0px 11px;
 
       .icon {
-        color: var(--color-orange);
-        font-size: 30px;
+        // color: var(--color-orange);
+        font-size: 35px;
       }
 
       .product-info {
@@ -123,7 +135,7 @@
         justify-content: space-between;
 
         .product-title {
-          color: var(--color-mainBlue);
+          // color: var(--color-mainBlue);
           font-family: "Cairo";
           font-style: normal;
           font-weight: 600;
@@ -140,7 +152,7 @@
           font-size: 20px;
           line-height: 37px;
           text-align: right;
-          color: var(--color-mainBlue);
+          // color: var(--color-mainBlue);
         }
       }
     }
