--- a/src/features/search/search.scss
+++ b/src/features/search/search.scss
@@ -1,43 +1,48 @@
+@import "../../style.scss";
+
 .searchWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  .input {
-    width: 100%;
-    border: 1px solid var(--color-mainBlue);
-    border-radius: 10px;
-    text-align: right;
-    padding: 10px;
-
-    &:focus {
-      outline: none;
-    }
-  }
-
-  .inputWrapper {
+  @include themify($themes) {
     display: flex;
-    flex-direction: row;
-    gap: 10px;
-    width: 95%;
-    height: 36px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    position: relative;
-  }
+    align-items: center;
+    justify-content: center;
 
-  .btn {
-    position: absolute;
-    width: 70px;
-    height: 32px;
-    font-family: "Cairo";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 34px;
-    text-align: center;
-    background: var(--color-mainBlue);
-    border-radius: 10px;
-    color: var(--color-white);
+    .input {
+      width: 100%;
+      border: 1px solid themed("border");
+      border-radius: 10px;
+      text-align: right;
+      padding: 10px;
+      background-color: themed("bgSoft");
+      color: themed("textColor");
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .inputWrapper {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      width: 95%;
+      height: 36px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      position: relative;
+    }
+
+    .btn {
+      position: absolute;
+      width: 70px;
+      height: 32px;
+      font-family: "Cairo";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 34px;
+      text-align: center;
+      background: #2c7be5;
+      border-radius: 10px;
+      color: #ffff;
+    }
   }
 }
