--- a/src/features/swipers/categorySwiper/categorySwiper.scss
+++ b/src/features/swipers/categorySwiper/categorySwiper.scss
@@ -1,87 +1,93 @@
+@import "../../../style.scss";
+
 .categoryswiper-container {
-  width: 100%;
-  /* height: 25px; */
-  margin-top: 15px;
-  margin-bottom: 15px;
+  @include themify($themes) {
+    width: 100%;
+    /* height: 25px; */
+    margin-top: 15px;
+    margin-bottom: 15px;
 
-  .container-title {
-    display: flex;
-    flex-direction: row-reverse;
-    margin-right: 15px;
-    padding-bottom: 10px;
-    margin-top: 20px;
+    .container-title {
+      display: flex;
+      flex-direction: row-reverse;
+      margin-right: 15px;
+      padding-bottom: 10px;
+      margin-top: 20px;
 
-    .bar {
-      width: 4px;
-      height: 32px;
-      background: var(--color-orange);
+      .bar {
+        width: 4px;
+        height: 32px;
+        background: themed("orangeBlueIcons");
+      }
+
+      h3 {
+        font-family: "Cairo";
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 37px;
+        text-align: right;
+        color: themed("textColor");
+        padding-right: 8px;
+      }
     }
 
-    h3 {
-      font-family: "Cairo";
-      font-style: normal;
-      font-weight: 600;
-      font-size: 20px;
-      line-height: 37px;
-      text-align: right;
-      color: var(--color-mainBlue);
-      padding-right: 8px;
+    .category-container {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      flex-direction: row;
+      padding: 5px;
+      gap: 10px;
+
+      p {
+        font-family: "Cairo";
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 30px;
+        text-align: right;
+        color: themed("textColor");
+      }
     }
-  }
-
-  .category-container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: row;
-    padding: 5px;
-    gap: 10px;
-
-    p {
-      font-family: "Cairo";
-      font-style: normal;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 30px;
-      text-align: right;
-      color: var(--color-mainBlue);
+    .mySwiper {
+      width: 95% !important;
     }
-  }
-  .mySwiper {
-    width: 95% !important;
-  }
 
-  .swiper {
-    width: 100%;
-    height: 100%;
-  }
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    border-radius: 10px;
+    .swiper {
+      width: 100%;
+      height: 100%;
+    }
+    .swiper-slide {
+      width: 109px !important;
+      height: 35px;
+      font-size: 18px;
+      background: #fff;
+      border-radius: 10px;
+      background-color: themed("bgSoft");
 
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+      /* Center slide text vertically */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-  .icon-category {
-    color: var(--color-mainBlue);
-  }
-  .active-category {
-    color: var(--color-orange);
-
-    p {
-      color: var(--color-orange);
+    .icon-category {
+      color: themed("mainIconColor");
+    }
+    .active-category {
+      color: themed("orangeBlueIcons");
+      p {
+        color: themed("orangeBlueIcons");
+      }
     }
   }
 }
