--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cairo&display=swap");
+@import "./style.scss";
 * {
   margin: 0;
   padding: 0;
@@ -6,18 +7,19 @@
 }
 
 body {
-  min-height: 100vh;
-  position: relative;
-  --color-mainBlue: #2c7be5;
-  --color-bg: #edf2f9;
-  --color-bg-Blue: rgba(44, 123, 229, 0.5);
-  --color-white: #ffffff;
-  --color-orange: #ff6347;
-  --color-gray: #989898;
+  @include themify($themes) {
+    height: 100vh;
+    position: relative;
+    background-color: themed("bg");
+    --color-mainBlue: #2c7be5;
+    --color-bg: #edf2f9;
+    --color-bg-Blue: rgba(44, 123, 229, 0.5);
+    --color-white: #ffffff;
+    --color-orange: #ff6347;
+    --color-gray: #989898;
+  }
 }
 #root {
-  background-color: var(--color-bg);
-
   --swiper-navigation-size: 22px;
   --swiper-pagination-color: var(--color-mainBlue);
   scroll-behavior: smooth;
