--- a/src/pages/favorites/favoriteNavBar.scss
+++ b/src/pages/favorites/favoriteNavBar.scss
@@ -1,20 +1,23 @@
+@import "../../style.scss";
+
 .favoriteNavBar-container {
+  @include themify($themes) {
     width: 100%;
     height: 75px;
     border-radius: 0 0 10px 10px;
-    background: var(--color-white);
+    background: themed("bgSoft");
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: space-around;
-  
+
     .rapper {
       width: 95%;
       margin-top: 10px;
       display: flex;
       justify-content: space-between;
-  
+
       .title {
         margin-right: 5px;
         P {
@@ -27,17 +30,17 @@
           font-weight: 500;
           font-size: 20px;
           line-height: 37px;
-          color: var(--color-mainBlue);
+          color: #2C7BE5;
         }
       }
-  
+
       .delete-icon {
-        color: var(--color-gray);
+        color: #989898;
       }
-  
+
       .back-icon {
-        color: var(--color-gray);
+        color: #989898;
       }
     }
   }
-  
+}
