--- a/src/pages/favorites/favoritsPage.scss
+++ b/src/pages/favorites/favoritsPage.scss
@@ -1,45 +1,49 @@
+@import "../../style.scss";
+
 .favoritsPage-container {
-  width: 100%;
-  min-height: 80vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  .container-title {
+  @include themify($themes) {
+    width: 100%;
+    min-height: 80vh;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    width: 95%;
 
-    .title {
+    .container-title {
       display: flex;
       flex-direction: row-reverse;
       align-items: center;
+      justify-content: space-between;
+      width: 95%;
+      margin: 5px 0px;
 
-      .icon {
-        color: var(--color-orange);
-        font-size: 40px;
+      .title {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+
+        .icon {
+          color: themed("orangeGrayIcons");
+          font-size: 40px;
+        }
+
+        h3 {
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 600;
+          font-size: 20px;
+          line-height: 37px;
+          text-align: right;
+          color: themed("textColor");
+        }
       }
 
-      h3 {
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 600;
-        font-size: 20px;
-        line-height: 37px;
-        text-align: right;
-        color: var(--color-mainBlue);
+      .delete-icon {
+        color: #989898;
       }
     }
 
-    .delete-icon {
-      color: var(--color-gray);
+    .fav-ProductList {
+      width: 100%;
     }
   }
-
-  .fav-ProductList{
-    width: 100%;
-  }
-
 }
