--- a/src/pages/mainPage/MainNavBar.scss
+++ b/src/pages/mainPage/MainNavBar.scss
@@ -1,28 +1,38 @@
-.main-nav {
-  border-radius: 0 0 10px 10px;
-  background: var(--color-white);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  // position: sticky;
-  // top: 0;
-  // display: block;
-  margin-bottom: 20px;
-  // z-index: 999;
+@import "../../style.scss";
 
-  .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    // height: 100px;
-    height: 80px;
-    align-items: flex-end;
-    .nav-icons {
+.main-nav {
+  @include themify($themes) {
+    width: 100%;
+    border-radius: 0 0 10px 10px;
+    background-color: themed("bgSoft");
+    // background: var(--color-white);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    // position: sticky;
+    // top: 0;
+    // display: block;
+    margin-bottom: 20px;
+    // z-index: 999;
+
+    .container {
       display: flex;
-      gap: 20px;
-      padding: 0px 0px 10px 10px;
-    }
-    .logo {
-      padding-right: 18px;
-      padding-bottom: 10px;
+      flex-direction: row;
+      justify-content: space-between;
+      // height: 100px;
+      height: 80px;
+      align-items: flex-end;
+      .nav-icons {
+        display: flex;
+        gap: 20px;
+        padding: 0px 0px 10px 10px;
+        .icon {
+          color: themed("mainIconColor");
+        }
+      }
+      .logo {
+        padding-right: 18px;
+        padding-bottom: 10px;
+        fill: themed("mainIconColor");
+      }
     }
   }
 }
