--- a/src/features/products/modalProduct/modalProduct.scss
+++ b/src/features/products/modalProduct/modalProduct.scss
@@ -1,9 +1,12 @@
+@import "../../../style.scss";
+
 .ModalProduct {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 10px;
+
 
   .card {
     display: flex;
