--- a/src/pages/cartPage/cartNavBar.scss
+++ b/src/pages/cartPage/cartNavBar.scss
@@ -1,42 +1,46 @@
+@import "../../style.scss";
+
 .cartNavBar-container {
-  width: 100%;
-  height: 75px;
-  border-radius: 0 0 10px 10px;
-  background: var(--color-white);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  margin-bottom: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-
-  .rapper {
-    width: 95%;
-    margin-top: 10px;
+  @include themify($themes) {
+    width: 100%;
+    height: 75px;
+    border-radius: 0 0 10px 10px;
+    background: themed("bgSoft");
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 10px;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: space-around;
 
-    .title {
-      margin-right: 5px;
-      P {
-        gap: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 37px;
-        color: var(--color-mainBlue);
+    .rapper {
+      width: 95%;
+      margin-top: 10px;
+      display: flex;
+      justify-content: space-between;
+
+      .title {
+        margin-right: 5px;
+        P {
+          gap: 10px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 500;
+          font-size: 20px;
+          line-height: 37px;
+          color: #2c7be5;
+        }
       }
-    }
 
-    .delete-icon {
-      color: var(--color-gray);
-    }
+      .delete-icon {
+        color: #989898;
+      }
 
-    .back-icon {
-      color: var(--color-gray);
+      .back-icon {
+        color: #989898;
+      }
     }
   }
 }
