--- a/src/pages/cartPage/cartPage.scss
+++ b/src/pages/cartPage/cartPage.scss
@@ -1,129 +1,132 @@
+@import "../../style.scss";
+
 .CartPage-container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  // justify-content: center;
-
-  .container-title {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content: space-between;
-    width: 95%;
-
-    .title {
-      display: flex;
-      flex-direction: row-reverse;
-      align-items: center;
-      // margin-right: 10px;
-
-      .icon {
-        color: var(--color-orange);
-        font-size: 40px;
-      }
-
-      h3 {
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 600;
-        font-size: 20px;
-        line-height: 37px;
-        text-align: right;
-        color: var(--color-mainBlue);
-      }
-    }
-
-    .delete-icon {
-      color: var(--color-gray);
-    }
-  }
-
-  .cart-footer {
-    width: 95%;
+  @include themify($themes) {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 10px;
-    direction: rtl;
-    padding-bottom: 5px;
+    // justify-content: center;
 
-    hr {
-      width: 96%;
-      border: 1px solid var(--color-orange);
-    }
-
-    .price {
-      width: 95%;
+    .container-title {
       display: flex;
-      flex-direction: row;
+      flex-direction: row-reverse;
       align-items: center;
       justify-content: space-between;
-      gap: 10px;
+      width: 95%;
 
-      p {
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 26px;
-        text-align: right;
-        color: var(--color-mainBlue);
-        span {
-          color: var(--color-orange);
+      .title {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        // margin-right: 10px;
+
+        .icon {
+          color: themed("orangeGrayIcons");
+          font-size: 40px;
+        }
+
+        h3 {
+          font-family: "Cairo";
+          font-style: normal;
           font-weight: 600;
+          font-size: 20px;
+          line-height: 37px;
+          text-align: right;
+          color: themed("textColor");
         }
       }
 
-      .total-price {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 189px;
-        height: 35px;
-        background: var(--color-white);
-        border-radius: 10px;
-      }
-
-      .delivery {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 144px;
-        height: 35px;
-        background: var(--color-white);
-        border-radius: 10px;
+      .delete-icon {
+        color: #989898;
       }
     }
 
-    .check-btn {
+    .cart-footer {
+      width: 95%;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 5px;
-      width: 189px;
-      height: 40px;
-      border-radius: 10px;
-      border: none;
-      background: var(--color-mainBlue);
+      gap: 10px;
       direction: rtl;
-      span {
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        color: var(--color-white);
+      padding-bottom: 5px;
+
+      hr {
+        width: 96%;
+        border: 1px solid themed("orangeBlueIcons");
       }
 
-      .icon {
-        color: var(--color-white);
-        font-size: 30px;
+      .price {
+        width: 95%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+
+        p {
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 26px;
+          text-align: right;
+          color: themed("textColor");
+          span {
+            color: themed("orangeBlueIcons");
+            font-weight: 600;
+          }
+        }
+
+        .total-price {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 189px;
+          height: 35px;
+          background: themed("bgSoft");
+          border-radius: 10px;
+        }
+
+        .delivery {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 144px;
+          height: 35px;
+          background: themed("bgSoft");
+          border-radius: 10px;
+        }
+      }
+
+      .check-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        width: 189px;
+        height: 40px;
+        border-radius: 10px;
+        border: none;
+        background: themed("textColor");
+        direction: rtl;
+        span {
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 500;
+          font-size: 16px;
+          color: themed("bgSoft");
+        }
+
+        .icon {
+          color: themed("bgSoft");
+          font-size: 30px;
+        }
       }
     }
   }
 }
-
 /* ____ MEDIA QUERIES (MEDIUM DEVICES) ________ */
 @media screen and (min-width: 600px) {
   .CartPage-container {
