--- a/src/pages/splashScreen/splash.style.scss
+++ b/src/pages/splashScreen/splash.style.scss
@@ -1,3 +1,5 @@
+@import "../../style.scss";
+
 .splash-container {
   width: 100%;
   height: 100vh;
@@ -5,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #edf2f9;
   img {
     object-fit: contain;
     width: 50%;
