--- a/src/pages/cartPage/cartPage.scss
+++ b/src/pages/cartPage/cartPage.scss
@@ -110,7 +110,7 @@
         border-radius: 10px;
         border: none;
         background: themed("textColor");
-        direction: rtl;
+        margin-top: 10px;
         span {
           font-family: "Cairo";
           font-style: normal;
