--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@ $themes: (
     orangeGrayIcons: #ff6347,
     orangeBlueIcons: #ff6347,
     blueWhite: #2c7be5,
+    blackGray: #000000,
     border: #2c7be5,
     iconBg: rgba(44, 123, 229, 0.3),
   ),
@@ -18,6 +19,7 @@ $themes: (
     orangeGrayIcons: #d8e2ef,
     orangeBlueIcons: #2c7be5,
     blueWhite: #ffffff,
+    blackGray: #d9d9d9,
     border: #9da9bb,
     iconBg: #2c7be5,
   ),
